# gdmc2026

./: .env  .gitignore  MODULE_CHANGE_NOTICE.md  README.md  builder.py  coordinate_system.py  main.py  map_manager.py  marker.py  opencode.jsonc  plotter.py  pyproject.toml  run_settlement.py  terraformer.py  validate_coordinates.py  visualizer_server.py  voronoi.py  voxel_visualizer.html
data/: data.npz  (+4 more)
prefab-housing/: README.md  pyproject.toml
prefab-housing/designs/: interior_room_styles.generated.json  modular_default.wallface  modular_var1.wallface
prefab-housing/editor/: wallface_editor.html
prefab-housing/production_cache/residential_upgrade/: .wallface_stamps.json  README.md  seed_043.pbp  seed_043__strained__badlands.pbp  seed_043__strained__birch.pbp  seed_043__strained__dark_forest.pbp  seed_043__strained__savanna.pbp  seed_043__strained__snowy.pbp  seed_043__strained__temperate.pbp  seed_043__struggling__birch.pbp  seed_043__thriving__birch.pbp  seed_044.pbp  seed_044__strained__badlands.pbp  seed_044__strained__birch.pbp  seed_044__strained__dark_forest.pbp  seed_044__strained__savanna.pbp  seed_044__strained__snowy.pbp  seed_044__strained__temperate.pbp  seed_044__struggling__birch.pbp  seed_044__thriving__birch.pbp  seed_045.pbp  seed_045__strained__badlands.pbp  seed_045__strained__birch.pbp  seed_045__strained__dark_forest.pbp  seed_045__strained__savanna.pbp  seed_045__strained__snowy.pbp  seed_045__strained__temperate.pbp  seed_045__struggling__birch.pbp  seed_045__thriving__birch.pbp  seed_046.pbp  seed_046__strained__badlands.pbp  seed_046__strained__birch.pbp  seed_046__strained__dark_forest.pbp  seed_046__strained__savanna.pbp  seed_046__strained__snowy.pbp  seed_046__strained__temperate.pbp  seed_046__struggling__birch.pbp  seed_046__thriving__birch.pbp  seed_047.pbp  seed_047__strained__badlands.pbp  (+16 more)
prefab-housing/tests/: test_api_smoke.py  test_empty_perimeter_prior.py  test_entry_door_module.py  test_farm_field_hydration.py  test_housing_plan.py  test_interior_grammar.py  test_layout.py  test_live_script_helpers.py  test_massing_score.py  test_minecraft_animation.py  test_modular_assembly.py  test_narrative_package_signature.py  test_openings.py  test_premade_placer_compat.py  test_programme.py  test_residential_interior_production.py  test_room_review.py  test_structural_plausibility.py  test_structure_report.py  test_town_lighting.py  test_town_prefab_script.py  test_upgrade.py  test_wallface.py
voxel-renderer/: README.md  pyproject.toml
voxel-renderer/tests/: test_orientation.py  test_prefab.py  test_visualiser_smoke.py  test_voxel_renderer_mcp.py
(+137 files in other folders)
