[project]
name = "voxel-renderer"
version = "0.1.1"
description = "Standalone voxel renderer and MCP server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.0,<2",
    "trimesh>=4.0.0",
    "pillow>=10.0.0",
    "pyrender>=0.1.45",
    "mcp>=1.0.0",
]

[project.scripts]
voxel-renderer-mcp = "voxel_renderer.mcp_server:main"

[tool.uv]
override-dependencies = ["pyopengl>=3.1.7"]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voxel_renderer"]

[tool.hatch.build.targets.wheel.force-include]
"assets/minecraft" = "assets/minecraft"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
